# ModShot-Core

./: .gitignore  BUILD.md  README.md  meson.build  modshot.conf.sample  setup.sh
binding-mri/: algorithm-binding.cpp  binding-mri.cpp  binding-types.h  binding-util.cpp  binding-util.h  bitmap-binding.cpp  etc-binding-util.h  etc-binding.cpp  meson.build  modshot-binding.cpp  oneshot-binding.cpp  plane-binding.cpp  screen-binding.cpp  sprite-binding.cpp  viewport-binding.cpp  wallpaper-binding.cpp
binding-mri/fmod-binding/studio/: eventinstance.cpp
linux/: Makefile  install.sh
scripts/: meson.build
scripts/rgss/: Main.rb  i18n_Language.rb
shader/: meson.build
src/: main.cpp  meson.build  version.h
src/al/source/: audio.cpp  soundemitter.cpp
src/filesystem/source/: filesystem.cpp
src/graphics/headers/: bitmap.h  sprite.h
src/graphics/source/: bitmap.cpp  font.cpp  graphics.cpp  plane.cpp  sprite.cpp  tilemap.cpp  viewport.cpp
src/input/source/: keybindings.cpp
src/oneshot/source/: oneshot.cpp  screen.cpp
src/opengl/headers/: gl-util.h  shader.h
src/opengl/source/: glstate.cpp  shader.cpp
src/rgss/headers/: etc-internal.h
src/thread/headers/: eventthread.h  sharedstate.h
src/thread/source/: eventthread.cpp  sharedstate.cpp
src/util/headers/: algorithm.h  boost-hash.h  config.h  debugwriter.h
src/util/source/: config.cpp
windows/: Makefile  install.sh
